# selenium-webtesting

./: .dockerignore  .gitignore   Dockerfile  README.md  script.sh
.github/workflows/: ci.yml
tests/: .dockerignore  Dockerfile  main.py  pyproject.toml
